# reinforcment_learning

./: .gitignore  .pre-commit-config.yaml  README.md  config.yaml  makefile  pyproject.toml
reinforcment_larning/hw1/: cross_entropy.py  determenistic_polices.py  smoothing.py
reinforcment_larning/hw2/: agent.py  lunar_lender.py  pendulum.py  utils.py
reinforcment_larning/hw3/: Frozen_Lake.py  agent.py  agent_value_iteration.py  agents_compare.py  play.py  play_ex_1_2.py  play_ex_3.py
reinforcment_larning/hw5/: Makefile  README.MD  dqn_double_learn.py  dqn_hard_learn.py  dqn_learn.py  dqn_soft_learn.py
reinforcment_larning/hw5/src/agents/: dqn.py  dqn_hard.py
reinforcment_larning/hw5/src/functions/: q_function.py
reinforcment_larning/hw6/: README.MD  ppo_pponew_compare.py
reinforcment_larning/hw6/notebooks/: example.ipynb
reinforcment_larning/hw6/src/agents/: PPO.py  __init__.py  ppo.py  ppo_new.py
tests/: testing.ipynb
