[tool.poetry]
name = "reinforcment-larning"
version = "0.1.0"
description = ""
authors = ["Dmitry Nesmeyanov <miradg99@gmail.com>"]
readme = "README.md"
packages = [{include = "reinforcment_larning"}]

[tool.poetry.dependencies]
python = "^3.10"
gym = {extras = ["box2d"], version = "^0.26.2"}
clearml = "^1.13.1"
pyyaml = "^6.0.1"
pre-commit = "^3.4.0"
torch = {url="https://download.pytorch.org/whl/cu117_pypi_cudnn/torch-2.0.1%2Bcu117.with.pypi.cudnn-cp310-cp310-linux_x86_64.whl"}
swig = "^4.1.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
